--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.2",
+    "node-package-manager": "^1.0.2",
     "nodemon": "^3.0.1"
   },
   "engines": {
     "node": ">=14.20.1"
   }
-
 }
